Update2 index.html

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
    
-    <div class="iletisim" style="position: fixed; bottom: 200px; left: 600px;">
+    <div class="iletisim" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);">
+
 
         <a href="https://github.com/melisa-6" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub Logo">
