--- a/index.html
+++ b/index.html
@@ -38,20 +38,18 @@
             border-radius: 8px;
         }
 
-        
         .iletisim {
-            background-color: rgb(223, 182, 243);
-            padding: 1px;
-            width: 300px;
-            height:70px;
-            margin: 1px auto;
-            text-align: center;
-            border-radius: 8px;
-            font-size:9px;
-        }
+    background-color: rgb(223, 182, 243);
+    padding: 10px;
+    width: 300px;
+    margin: 20px auto;
+    text-align: center;
+    border-radius: 8px;
+    font-size: 9px;
+}
 
         .iletisim img {
-            width: 30px; /* Logo boyutunu ayarlayın */
+            width: 30px;
             vertical-align: middle;
             margin-right: 10px;
             margin-bottom: 10px;
@@ -71,15 +69,14 @@
         }
 
         
-        .footer {
-            position: absolute;
-            bottom: 10px;
-            left: 0;
-            width: 100%;
-            text-align: center;
-            font-size: 10px; 
-            color: black;
-        }
+     .footer {
+    text-align: center;
+    font-size: 10px;
+    color: black;
+    padding: 10px;
+    margin-top: 30px;
+}
+
 
     </style>
 </head>
