--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
    
-    <div class="iletisim" style="position:  bottom: 20px; left: 50%; transform: translateX(-50%);">
+    <div class="iletisim">
 
 
         <a href="https://github.com/melisa-6" target="_blank">
