--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/2048px-Octicons-mark-github.svg.png" alt="GitHub Logo">
             melisa-6
         </a>       
-        <a href="https://www.instagram.com/melisa_taskara" target="_blank">
+        <a href="https://www.instagram.com/melisataskara_" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1200px-Instagram_logo_2022.svg.png" alt="Instagram Logo">
-            melisa_taskara
+            melisataskara_
         </a>
         <p>taskaramelisa@gmail.com</p>
     </div>
